--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     </span>
                 </li>
                 <li>
-                    <a href="#!"><img src="assets/style/images/galerie_photo3_mini.jpg" alt="photo_mini"/></a>
+                    <a href="#"><img src="assets/style/images/galerie_photo3_mini.jpg" alt="photo_mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo3.jpg" alt="photo"/>
                     </span>
@@ -415,11 +415,11 @@
 	        <img src="assets/style/images/insta.png" alt="instagram"/>
 	    </a>
 	    <a href="mailto:harosabrina0705@gmail.com">
-	    	<img src="assets/style/images/mail.png">
+	    	<img src="assets/style/images/mail.png" alt="mail"/>
 	    </a>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
