--- a/index.html
+++ b/index.html
@@ -282,89 +282,89 @@
         <div class=slider_focus title="Cliquez pour agrandir!">
             <ul>
                 <li>
-                    <a href="#!"><img src="assets/style/images/galerie_photo1_mini.jpg" alt="photo_mini"/></a>
+                    <a href=""><img src="assets/style/images/galerie_photo1_mini.jpg" alt="photo_mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo1.jpg" alt="photo"/>
                     </span>
                 </li>
                 <li>
-                    <a href="#!"><img src="assets/style/images/galerie_photo2_mini.jpg" alt="photo_mini"/></a>
+                    <a href=""><img src="assets/style/images/galerie_photo2_mini.jpg" alt="photo_mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo2.jpg" alt="photo"/>
                     </span>
                 </li>
                 <li>
-                    <a href="#"><img src="assets/style/images/galerie_photo3_mini.jpg" alt="photo_mini"/></a>
+                    <a href=""><img src="assets/style/images/galerie_photo3_mini.jpg" alt="photo_mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo3.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo4_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo4_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo4.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo5_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo5_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo5.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo6_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo6_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo6.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo7_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo7_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo7.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo8_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo8_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo8.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo9_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo9_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo9.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo10_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo10_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo10.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo11_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo11_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo11.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo12_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo12_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo12.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo13_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo13_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo13.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo14_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo14_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo14.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo15_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo15_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo15.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo16_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo16_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo16.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href="#!"><img src="assets/style/images/galerie_photo17_mini.jpg" alt="photo mini"/></a>
+                <li><a href=""><img src="assets/style/images/galerie_photo17_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo17.jpg" alt="photo"/>
                     </span>
