--- a/index.html
+++ b/index.html
@@ -282,29 +282,29 @@
         <div class=slider_focus title="Cliquez pour agrandir!">
             <ul>
                 <li>
-                    <a href=""><img src="assets/style/images/galerie_photo1_mini.jpg" alt="photo_mini"/></a>
+                    <a href="#album"><img src="assets/style/images/galerie_photo1_mini.jpg" alt="photo_mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo1.jpg" alt="photo"/>
                     </span>
                 </li>
                 <li>
-                    <a href=""><img src="assets/style/images/galerie_photo2_mini.jpg" alt="photo_mini"/></a>
+                    <a href="#album"><img src="assets/style/images/galerie_photo2_mini.jpg" alt="photo_mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo2.jpg" alt="photo"/>
                     </span>
                 </li>
                 <li>
-                    <a href=""><img src="assets/style/images/galerie_photo3_mini.jpg" alt="photo_mini"/></a>
+                    <a href="#album"><img src="assets/style/images/galerie_photo3_mini.jpg" alt="photo_mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo3.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo4_mini.jpg" alt="photo mini"/></a>
+                <li><a href="#album"><img src="assets/style/images/galerie_photo4_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo4.jpg" alt="photo"/>
                     </span>
                 </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo5_mini.jpg" alt="photo mini"/></a>
+                <li><a href="#album"><img src="assets/style/images/galerie_photo5_mini.jpg" alt="photo mini"/></a>
                     <span>
                         <img src="assets/style/images/galerie_photo5.jpg" alt="photo"/>
                     </span>
