--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 
-	<!--<div class="loader">
+	<div class="loader">
 	    <div class="loaderItemContainer">
 	      <div class="loaderItem loaderItem-1"><img src="assets/style/images/loaderPissenlit.png"></div>
 	    </div>
-  	</div>-->
+  	</div>
 
 	<header>
 		<div>
@@ -57,7 +57,7 @@
 	<div class="pages page-2" data-page="prestation">
 		<h2>Mes prestations:</h2>
 		<section>
-		    <article>
+		    <article class="box">
 		        <p>Soins du visage</p>
 		        <p>Soin Equilibre essentiel expert</p>
 		        <p>après une analyse précise de votre peau, ce soin est personnalisé pour répondre aux altérations cutanées individuelles. Un traitement sur mesure qui agit en profondeur pour des résultats durables.</p>
@@ -71,7 +71,7 @@
 		        <p>Inspiré d'un rituel japonnais. Véritable lifting manuel du visage associé à un complexe anti âge.</p>
 		    </article>
 
-		    <article>
+		    <article class="box">
 		        <p>Modelage du corps</p>
 		        <p>Modelage relaxant</p>
 		        <p>Sur l'ensemble du corp et du visage, manoeuvres lentes et profondes pour un véritable lâcher prise.</p>
@@ -83,7 +83,7 @@
 		        <p>Modelage ciblé du corps drainant et anti cellulite associé à un complexe d'huiles actives. Méthode physiodermie</p>
 		    </article>    
 
-		    <article>
+		    <article class="box">
 		        <p>Soins des mains et des pieds</p>
 		        <p>Manucure ou pédicure</p>
 		        <p>Limage et mise en forme des ongles. Hydratation intense grâce aux gants masques. Soin des cuticules et pose de base.</p>
@@ -91,7 +91,7 @@
 		        <p>Pédicure, gommage et callosités talon suivi d'un modelage relaxant.</p>
 		    </article>
 
-		    <article>
+		    <article class="box">
 		        <p>Epilation lumière pulsée</p>
 		        <p>L'épilation semi-définitive via lumière pulsée permet de détruire le bulbe du poil et retarder la repousse. En captant la lumière, la racine est comme "endormie" par la chaleur.En respectant le nombre de séances et la bonne intensité, l'épilation n'en sera que plus efficace. C’est une méthode indolore : vous ressentirez tout au plus un petit picotement.Garantie l'élimination de 90% de vos poils en quelques séance. (prévoir entre 8 et 10 séances / à raison d'une toutes les 6 semaines)</p>
 		    </article>
@@ -275,103 +275,19 @@
 
 	<div class="pages page-5" data-page="album">
 
-		<article>
-            <h2>Mon album photo:</h2>
-        </article>
+		<div class="border">
+			<article>
+	            <h2>Mon album photo:</h2>
+	        </article>
 
-        <div class=slider_focus title="Cliquez pour agrandir!">
-            <ul>
-                <li>
-                    <a href="#album"><img src="assets/style/images/galerie_photo1_mini.jpg" alt="photo_mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo1.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li>
-                    <a href="#album"><img src="assets/style/images/galerie_photo2_mini.jpg" alt="photo_mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo2.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li>
-                    <a href="#album"><img src="assets/style/images/galerie_photo3_mini.jpg" alt="photo_mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo3.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href="#album"><img src="assets/style/images/galerie_photo4_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo4.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href="#album"><img src="assets/style/images/galerie_photo5_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo5.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo6_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo6.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo7_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo7.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo8_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo8.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo9_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo9.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo10_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo10.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo11_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo11.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo12_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo12.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo13_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo13.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo14_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo14.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo15_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo15.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo16_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo16.jpg" alt="photo"/>
-                    </span>
-                </li>
-                <li><a href=""><img src="assets/style/images/galerie_photo17_mini.jpg" alt="photo mini"/></a>
-                    <span>
-                        <img src="assets/style/images/galerie_photo17.jpg" alt="photo"/>
-                    </span>
-                </li>
-            </ul>
-    	</div>
-	</div>
+			<div class="container">
+		        <button id="left-btn"><i class="arrow"></i></button>
+		        <img id="carousel" src="" alt="">
+		        <button id="right-btn"><i class="arrow"></i></button>
+		    </div>
+	    </div>
+
+    </div>
 
 	<div class="pages page-6" data-page="contact">
 
