--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Institut Soin De Soi</title>
+  <title>Contact</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -39,7 +39,7 @@
         <br><br>
         <h1 class="header center color-institut">L'Institut Soin De Soi</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Vos soins bien-être et beauté aux portes des Gorges du verdon dans le cœur de Gréoux-les-Bains. </h5>
+          <h5 class="header col s12 light">CONTACT</h5>
         </div>
         <br><br>
       </div>
@@ -55,78 +55,43 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h5 class="center">Coordonnées:</h5>
 
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
+            <p class="light center">tel: 06 83 83 78 14</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">person_pin_circle</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">Adresse:</h5>
 
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
+            <p class="light">16 Rue des Templiers 04800 Gréoux-les-Bains France</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">star</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h5 class="center">Horaires d'ouvertures:</h5>
 
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
+            <p class="light"><ul class="center">
+                  <li>lun: 09:00 – 19:00</li>
+                  <li>mar: 09:00 – 19:00</li>
+                  <li>mer: 09:00 – 19:00</li>
+                  <li>jeu: 09:00 – 19:00</li>
+                  <li>ven: 09:00 – 19:00</li>
+                  <li>sam: 09:00 – 19:00</li>
+                  <li>dim: Fermé</li>
+              </ul></p>
           </div>
         </div>
       </div>
 
     </div>
   </div>
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">Découvrez une large palette de soins et prestation beauté réalisées par Sabrina, une esthéticienne aux multiples diplômes et formation, agréable, jolie et passionné, vous trouverez forcément ce dont votre corps à besoin: soins, beauté du regard, modelage du corps, épilation, maquillage...</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="assets/style/images/background2.jpg" alt="Unsplashed background img 2"></div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-
-      <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Nos fournisseurs et marques</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">L'institut Soin de soi est a votre service pour des résultats efficaces, durable, Dans un cadre convivial et chaleureux!</h5>
-        </div>
-        <div class="row center">
-          <button class="album background-institut btn-large waves-effect waves-light">Album photo</button>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="assets/style/images/background3.jpg" alt="Unsplashed background img 3"></div>
-  </div>
-
-  <div class="album-photo">
-      <div class="container-album">
-            <button id="left-btn"><i class="arrow"></i></button>
-            <img id="carousel" src="" alt="">
-            <button id="right-btn"><i class="arrow"></i></button>
-      </div>
+  <div class="center z-depth-5">
+    <iframe class="z-depth-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2881.6756563337412!2d5.881267015501167!3d43.758831679117804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cbd1b0bf89ab71%3A0x6f2d260c55596f82!2sL&#39;institut%20SOIN%20DE%20SOI!5e0!3m2!1sfr!2sfr!4v1622141226344!5m2!1sfr!2sfr" allowfullscreen="" loading="lazy"></iframe>
   </div>
 
   <footer class="page-footer background-institut">
@@ -163,7 +128,5 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="assets/js/materialize.js"></script>
   <script src="assets/js/init.js"></script>
-  <script src="assets/js/script.js"></script>
-
   </body>
 </html>
