[WIP] - rwd + css

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="prestation.html">Prestations</a></li>
         <li><a href="tarif.html">Tarifs</a></li>
         <li><a href="permanent.html">Maquillage permanent</a></li>
+        <li><img src="assets/style/images/logo_institut2.png" alt="logo"></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -51,24 +52,7 @@
     <div class="section">
 
       <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
-
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">person_pin_circle</i></h2>
-            <h5 class="center">User Experience Focused</h5>
-
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
-          </div>
-        </div>
+      
 
         <div class="col s12 m4">
           <div class="icon-block">
@@ -100,8 +84,8 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Nos fournisseurs et marques</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h4>MÉTHODE PHYSIODERMIE</h4>
+          <p class="left-align light">Depuis 1974, Physiodermie, l’expert suisse des soins de la peau dont le laboratoire est situé à Genève, se consacre à la recherche et au développement de produits cosméceutiques pour les professionnels des soins de la peau.</p>
         </div>
       </div>
     </div>
