--- a/permanent.html
+++ b/permanent.html
@@ -27,7 +27,7 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="prestation.html">Prestations</a></li>
         <li><a href="tarif.html">Tarifs</a></li>
-        <li><a href="permanent.html">Maquillage permanent</a></li>
+        <li><a href="permanent.html">Maquillage-Permanent</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
