[WIP] - html + css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -16,18 +16,18 @@
       <a id="logo-container" href="index.html" class="brand-logo"><img src="assets/style/images/logo_institut2.png" alt="logo"></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="contact.html">Contact</a></li>
         <li><a href="prestation.html">Prestations</a></li>
-        <li><a href="tarif.html">Tarifs</a></li>
         <li><a href="permanent.html">Maquillage permanent</a></li>
+        <li><a href="tarif.html">Tarifs</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="contact.html">Contact</a></li>
         <li><a href="prestation.html">Prestations</a></li>
-        <li><a href="tarif.html">Tarifs</a></li>
         <li><a href="permanent.html">Maquillage permanent</a></li>
+        <li><a href="tarif.html">Tarifs</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><img src="assets/style/images/logo_institut2.png" alt="logo"></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -45,7 +45,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="assets/style/images/background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="assets/style/images/background1.png" alt="Unsplashed background img 1"></div>
   </div>
 
   <div class="container content-change">
@@ -53,19 +53,32 @@
 
       <!--   Icon Section   -->
       
-
+<div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">star</i></h2>
-            <h5 class="center">Easy to work with</h5>
-
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
+            <h2 class="center brown-text"><i class="medium material-icons">flash_on</i></h2>
+            <h5 class="center">Efficacité</h5>
+            <p class="light center">Une professionelle à la pointe de la modernité avec une experience de plus de 10 ans.</p>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="medium material-icons">thumb_up</i></h2>
+            <h5 class="center">Des produits<br>professionnels</h5>
+            <p class="light center">Aujourd'hui, Physiodermie s'est donnée pour mission de traiter toutes les altérations cutanées et obtenir des résultats visibles grâce à l'utilisation d'actifs naturels et de technologies, notamment celle de la micro-encapsulation.</p>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="medium material-icons">card_giftcard</i></h2>
+            <h5 class="center">Idée cadeaux</h5>
+            <p class="light center">Des coffrets cadeaux tout au long de l'année.</p>
           </div>
         </div>
       </div>
-
+</div>
     </div>
-  </div>
+  
 
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
@@ -85,7 +98,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>MÉTHODE PHYSIODERMIE</h4>
-          <p class="left-align light">Depuis 1974, Physiodermie, l’expert suisse des soins de la peau dont le laboratoire est situé à Genève, se consacre à la recherche et au développement de produits cosméceutiques pour les professionnels des soins de la peau.</p>
+          <p class="center light">Depuis 1974, Physiodermie, l’expert suisse des soins de la peau dont le laboratoire est situé à Genève, se consacre à la recherche et au développement de produits cosméceutiques pour les professionnels des soins de la peau.</p>
         </div>
       </div>
     </div>
