--- a/prestation.html
+++ b/prestation.html
@@ -16,18 +16,18 @@
       <a id="logo-container" href="index.html" class="brand-logo"><img src="assets/style/images/logo_institut2.png" alt="logo"></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="contact.html">Contact</a></li>
         <li><a href="prestation.html">Prestations</a></li>
-        <li><a href="tarif.html">Tarifs</a></li>
         <li><a href="permanent.html">Maquillage permanent</a></li>
+        <li><a href="tarif.html">Tarifs</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="contact.html">Contact</a></li>
         <li><a href="prestation.html">Prestations</a></li>
-        <li><a href="tarif.html">Tarifs</a></li>
         <li><a href="permanent.html">Maquillage permanent</a></li>
+        <li><a href="tarif.html">Tarifs</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -44,7 +44,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="assets/style/images/background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="assets/style/images/background1.png" alt="Unsplashed background img 1"></div>
   </div>
 
 
