--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <!--   Icon Section   -->
       
-<div class="row">
+  <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="medium material-icons">flash_on</i></h2>
@@ -76,15 +76,14 @@
           </div>
         </div>
       </div>
-</div>
     </div>
-  
+  </div>
 
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Découvrez une large palette de soins et prestation beauté réalisées par Sabrina, une esthéticienne aux multiples diplômes et formation, agréable, jolie et passionné, vous trouverez forcément ce dont votre corps à besoin: soins, beauté du regard, modelage du corps, épilation, maquillage...</h5>
+          <h5 class="header col s12 light">Découvrez une large palette de soins et prestation beauté réalisées par Sabrina, une esthéticienne aux multiples diplômes et formations, agréable, jolie et passionné, vous trouverez forcément ce dont votre corps à besoin: soins, beauté du regard, modelage du corps, épilation, maquillage...</h5>
         </div>
       </div>
     </div>
