--- a/permanent.html
+++ b/permanent.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -49,7 +49,71 @@
 
 
   
+<section>
+          <h2>Le Maquillage permanent</h2>
+          <p class="txt-legend">La beauté naturelle durable. Redessiner, souligner, intensifier ou corriger vos sourcils, vos yeux ou votre bouche.</p>
+            
+            <article class="box perma-1">
+              <h3>Tarifs</h3>
+              <div class="perma-in perma-in-1">
+                  <p>Sourcils</p>
+                  <ul class="list-institut">
+                      <li>Hairstroke - Effet poil à poil. 290€</li>
+                      <li>Perfect brow - Intensification des sourcils. 250€</li>
+                      <li>Hybride - Mixte poudré / poil à poil. 320€</li>
+                  </ul>
+                  <p>Yeux</p>
+                  <img src="assets/style/images/microneesling.jpg" alt="photo"/>
+                  <p>Lashliner - Intensification ras de cils</p>
+                  <ul class="list-institut">
+                      <li>Haut. 180€</li>
+                      <li>Bas. 100€</li>
+                      <li>Haut et bas. 250€</li>
+                  </ul>
+                  <p>Lèvre</p>
+                  <ul class="list-institut">
+                    <li>Magic lips by Maud - Naturel, nude ou rosé avec contour léger + illuminateur. 350€</li>
+                  </ul>
+                  <p>Natural Freckles</p> 
+                  <ul class="list-institut">
+                    <li>Tâches de rousseurs de différentes tailles et couleurs. 200€</li>
+                  </ul> 
+              </div>
+            </article>
 
+            <article class="box perma-2">
+              <h3>infos</h3>
+              <div class="perma-in perma-in-2">
+                  <p>Toute création comprend une retouche à une mois incluse.</p>
+                  <p>Retouches</p>
+                  <p>A l'issue d'une création. 2ème retouche-Ajustement forme-couleur. 60€ (séance dans les 3 mois qui suivent la création)</p>
+                  <p>Entretien</p>
+                  <p>Après une création. (Remise sur le prix de la création) </p>
+                  <ul class="list-institut">
+                      <li>De 3 à 6 mois. -70%</li>
+                      <li>De 6 à 12 mois. -50%</li>
+                      <li>De 12 à 18 mois. -30%</li>
+                  </ul> 
+              </div>
+            </article>
+
+            <article class="box perma-3">
+              <h3>Microneedling and co</h3>
+              <div class="perma-in perma-in-3">
+                  <ul class="list-institut">
+                    <p>Microneedling</p>
+                      <li>Le microneedling est une technique de revitalisation de la peau qui agit sur les problématique du veillissement cutané, ameliore le grain et l'éclat de la peau, réduit les taches, les traces d'acné, les cicatrices et les pores dilatés. En créant des micro-perforations en superficie des la peau avec un stylet électrique, le microneedling déclenche un processus de réparation naturelle de la peau en stimulant la production d'élastique et de collagène ainsi qu'une forte pénetration des actifs utilisé lors de la séance. associé à une séance de luminothérapie. 90€</li>
+                      <p>BBglow</p>
+                      <li>Application d'un sérum teinté sur l'ensemble du visage. Masque les imperfections, rougeurs, taches et unifie le teint. maquillage bbcrème semi permanent. 95€</li>
+                      <p>BBlips</p>
+                      <li>Application d'un serum teinté pour des lèvres légèrement coloré. maquillage de la bouche semi permanent. 80€</li>
+                      <p>Brow lift</p>
+                      <li>Restructuration et épaississement des sourcils de façon naturelle et temporaire. 60€</li>
+                  </ul>
+                </div>
+            </article>
+
+      </section>
   
 
   
