--- a/tarif.html
+++ b/tarif.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -102,7 +102,7 @@
             <li class="price">Nutrition Royale pieds: <span>60min 50€</span></li>
             <li class="price">Pose de vernis: <span>10€</span></li>
             <li class="price">Pose de vernis permanent: <span>25€</span></li>
-            <li class="price">Manucure/ Pédicure + POse de vernis: <span>30€</span></li>
+            <li class="price">Manucure/ Pédicure + Pose de vernis: <span>30€</span></li>
             <li class="price">Manucure/Pédicure + Pose de vernis permanent: <span>40€</span></li>
             <li class="price">Pose complète gel + rallonges: <span>55€</span></li>
             <li class="price">Pose gel sur ongles naturels: <span>50€</span></li>
@@ -173,9 +173,6 @@
   </ul>
 
   
-
-  
-
   <footer class="page-footer background-institut">
     <div class="container">
       <div class="row">
